--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div class="carousel-container">
         <div class="carousel-slider">
-            <img src="/images/hotel-pic-1.jpg" alt="Hotel Picture 1">
-            <img src="/images/hotel-pic-2.jpg" alt="Hotel Picture 2">
-            <img src="/images/hotel-pic-3.jpg" alt="Hotel Picture 3">
-            <img src="/images/hotel-pic-4.jpg" alt="Hotel Picture 4">
+            <img src="./images/hotel-pic-1.jpg" alt="Hotel Picture 1">
+            <img src="./images/hotel-pic-2.jpg" alt="Hotel Picture 2">
+            <img src="./images/hotel-pic-3.jpg" alt="Hotel Picture 3">
+            <img src="./images/hotel-pic-4.jpg" alt="Hotel Picture 4">
         </div>
         <div class="prev-next-container">
             <button class="prev-btn">Previous</button>
